--- a/devcontainer.json
+++ b/devcontainer.json
@@ -2,7 +2,7 @@
 	"name": "Existing Dockerfile",
 
 	// Sets the run context to one level up instead of the .devcontainer folder.
-	"context": "..",
+	//"context": "..",
 
 	// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
 	"dockerFile": "Dockerfile",
